--- a/app/src/styles/_create.scss
+++ b/app/src/styles/_create.scss
@@ -73,6 +73,7 @@
   border-radius: 4px;
   font-size: 14px;
   cursor: pointer;
+  width: fit-content;
 }
 
 .Filter-tag--removable:hover {
